--- a/web_app/templates/bootstrap_5_layout.html
+++ b/web_app/templates/bootstrap_5_layout.html
@@ -43,6 +43,7 @@
         ('/about', 'about', 'About'),
         ('/hello', 'hello', 'Hello'),
         ('/stocks/form', 'stocks_form', 'Stocks Form'),
+        ('/unemployment/dashboard', 'unemployment_dashboard', 'Unemployment Dashboard'),
         ('/products', 'products', 'Products'),
     ] -%}
     {% set active_page = active_page|default('home') -%}
