--- a/web_app/templates/bootstrap_5_layout.html
+++ b/web_app/templates/bootstrap_5_layout.html
@@ -94,8 +94,8 @@
 
         <footer style="margin-top:2em; margin-bottom:2em;">
         <hr>
-            &copy; Copyright 2023 [Your Name Here] |
-            <a href="https://github.com/prof-rossetti/intro-to-python/blob/main/exercises/web-app-2023/README.md">Source</a>
+            &copy; Copyright 2024 Brigitte Webb |
+            <a href="https://github.com/brigittewebb/my-first-app-fall-2024/blob/main/README.md">Source</a>
         </footer>
     </div>
 
