--- a/web_app/templates/bootstrap_5_layout.html
+++ b/web_app/templates/bootstrap_5_layout.html
@@ -44,6 +44,7 @@
         ('/hello', 'hello', 'Hello'),
         ('/stocks/form', 'stocks_form', 'Stocks Form'),
         ('/unemployment/dashboard', 'unemployment_dashboard', 'Unemployment Dashboard'),
+        ('/drinks_challenge', 'drinks_challenge', 'Drinks Challenge'),
         ('/products', 'products', 'Products'),
     ] -%}
     {% set active_page = active_page|default('home') -%}
